src/objects/Grant_Management__c.object
<CustomObject>
    <fields>
        <fullName>Amount_of_Grant_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount of Grant Awarded</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>FALSE</formula>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Development_Lead__c</fullName>
        <inlineHelpText>Development staff driving the ask</inlineHelpText>
        <label>Development Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Other/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Alsop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Anderson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Martin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Display_Fringe_Benefits_Separately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Fringe Benefits Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <picklist>
            <picklistValues>
                <fullName>c3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Award_Date__c</fullName>
        <inlineHelpText>Date on Grant Award Letter</inlineHelpText>
        <label>Grant Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_End_Date__c</fullName>
        <inlineHelpText>Official End Date of Grant</inlineHelpText>
        <label>Grant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Number__c</fullName>
        <inlineHelpText>What is the institutionally-designated grant number?</inlineHelpText>
        <label>Grant Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Period_End__c</fullName>
        <inlineHelpText>End date of grant period.</inlineHelpText>
        <label>Grant Period: End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Period_Start__c</fullName>
        <inlineHelpText>Start date of grant period.</inlineHelpText>
        <label>Grant Period: Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Provisions__c</fullName>
        <inlineHelpText>Any notes about the grant requirements other than reporting.</inlineHelpText>
        <label>Grant Provisions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Start_Date__c</fullName>
        <inlineHelpText>Official Start Date of Grant</inlineHelpText>
        <label>Grant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grantee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The organization funding the grant.</inlineHelpText>
        <label>Grantor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grant Management</relationshipLabel>
        <relationshipName>Grant_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Staff__c</fullName>
        <inlineHelpText>Staffers listed as Lead Staff on the Staff Participation related list.</inlineHelpText>
        <label>Lead Staff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multi_Year_Total__c</fullName>
        <label>Multi-Year Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Years__c</fullName>
        <label>Number of Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <inlineHelpText>The numerical code that corresponds to the Project record created for this grant.</inlineHelpText>
        <label>Project Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Grant Management</relationshipLabel>
        <relationshipName>Grant_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Requirements__c</fullName>
        <label>Reporting Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_Class__c</fullName>
        <label>Revenue Class</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Grant Management</relationshipLabel>
        <relationshipName>Grant_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Grant Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Code__c</columns>
        <columns>Grant_Period_Start__c</columns>
        <columns>Grant_Period_End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Grant Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>